fixed macro font being too big

--- a/blitz/staticfiles/css/sass/style.scss
+++ b/blitz/staticfiles/css/sass/style.scss
@@ -6973,7 +6973,7 @@ h3 small {
 }
 
 .description.info a {
-  font-size: 2em;
+  //font-size: 2em;
 }
 
 .clientlist > .inner > .actions {
